Fixed layout bug

--- a/src/components/AppLayout/style.css
+++ b/src/components/AppLayout/style.css
@@ -1,5 +1,7 @@
 .app-layout {
   display: flex;
   flex: 1;
+  height: 100vh;
   flex-direction: row;
+  overflow-y: hidden;
 }
